src/toggl_api.h

// Models

    typedef struct {
        uint64_t ID;
        int64_t DurationInSeconds;
        char_t *Description;
        char_t *ProjectAndTaskLabel;
        char_t *TaskLabel;
        char_t *ProjectLabel;
        char_t *ClientLabel;
        uint64_t WID;
        uint64_t PID;
        uint64_t TID;
        char_t *Duration;
        char_t *Color;
        char_t *GUID;
        bool_t Billable;
        // Redmine TimeEntryActivity id (Redmine fork).
        uint64_t ActivityID;
        char_t *Tags;
        uint64_t Started;
        uint64_t Ended;
        char_t *StartTimeString;
        char_t *EndTimeString;
        uint64_t UpdatedAt;
        bool_t DurOnly;
        // In case it's a header
        char_t *DateHeader;
        char_t *DateDuration;
        bool_t IsHeader;
        // Additional fields; only when in time entry editor
        bool_t CanAddProjects;
        bool_t CanSeeBillable;
        uint64_t DefaultWID;
        char_t *WorkspaceName;
        // If syncing a time entry ended with an error,
        // the error is attached to the time entry
        char_t *Error;
        bool_t Locked;
        // Indicates if time entry is not synced to server
        bool_t Unsynced;
        // Group attributes
        bool_t Group;
        bool_t GroupOpen;
        char_t *GroupName;
        char_t *GroupDuration;
        uint64_t GroupItemCount;
        // To categorize to 15-minute batches
        uint64_t RoundedStart;
        uint64_t RoundedEnd;
        // Next in list
        void *Next;
    } TogglTimeEntryView;
    typedef struct {
        uint64_t Started;
        uint64_t Ended;
        char_t *StartTimeString;
        char_t *EndTimeString;
        void *Next;
        void *FirstEvent;
    } TogglTimelineChunkView;
    typedef struct {
        // This is what is displayed to user, includes project and task.
        char_t *Text;
        // This is copied to "time_entry.description" field if item is selected
        char_t *Description;
        // Project label, if has a project
        char_t *ProjectAndTaskLabel;
        char_t *TaskLabel;
        char_t *ProjectLabel;
        char_t *ClientLabel;
        char_t *ProjectColor;
        char_t *ProjectGUID;
        uint64_t TaskID;
        uint64_t ProjectID;
        uint64_t WorkspaceID;
        uint64_t Type;
        // If its a time entry or project, it can be billable
        bool_t Billable;
        // If its a time entry, it has tags
        char_t *Tags;
        char_t *WorkspaceName;
        uint64_t ClientID;
        void *Next;
    } TogglAutocompleteView;
    typedef struct {
        uint64_t ID;
        uint64_t WID;
        char_t *GUID;
        char_t *Name;
        char_t *WorkspaceName;
        bool_t Premium;
        void *Next;
    } TogglGenericView;
    typedef struct {
        char_t *Category;
        char_t *Name;
        char_t *URL;
        void *Next;
    } TogglHelpArticleView;
    typedef struct {
        bool_t UseProxy;
        char_t *ProxyHost;
        uint64_t ProxyPort;
        char_t *ProxyUsername;
        char_t *ProxyPassword;
        bool_t UseIdleDetection;
        bool_t MenubarTimer;
        bool_t MenubarProject;
        bool_t DockIcon;
        bool_t OnTop;
        bool_t Reminder;
        bool_t RecordTimeline;
        int64_t IdleMinutes;
        bool_t FocusOnShortcut;
        int64_t ReminderMinutes;
        bool_t ManualMode;
        bool_t AutodetectProxy;
        bool_t RemindMon;
        bool_t RemindTue;
        bool_t RemindWed;
        bool_t RemindThu;
        bool_t RemindFri;
        bool_t RemindSat;
        bool_t RemindSun;
        char_t *RemindStarts;
        char_t *RemindEnds;
        bool_t Autotrack;
        bool_t OpenEditorOnShortcut;
        bool_t Pomodoro;
        bool_t PomodoroBreak;
        int64_t PomodoroMinutes;
        int64_t PomodoroBreakMinutes;
        bool_t StopEntryOnShutdownSleep;
        bool_t ShowTouchBar;
        bool_t StartAutotrackerWithoutSuggestions;
        bool_t StartAutotrackerWhileTimerIsRunning;
        uint8_t ActiveTab;
        uint8_t ColorTheme;
        bool_t ForceIgnoreCert;
        // Redmine fork: default TimeEntryActivity id for new entries.
        uint64_t DefaultActivityID;
    } TogglSettingsView;
    typedef void (*TogglDisplayOnlineState)(
        const int64_t state);
    typedef void (*TogglDisplayURL)(
        const char_t *url);
    typedef void (*TogglDisplayLogin)(
        const bool_t open,
        const uint64_t user_id);
    typedef void (*TogglDisplayReminder)(
        const char_t *title,
        const char_t *informative_text);
    typedef void (*TogglDisplayPomodoro)(
        const char_t *title,
        const char_t *informative_text);
    typedef void (*TogglDisplayPomodoroBreak)(
        const char_t *title,
        const char_t *informative_text);
    typedef void (*TogglDisplayAutotrackerNotification)(
        const char_t *project_name,
        const uint64_t project_id,
        const uint64_t task_id);
    typedef void (*TogglDisplayTimeEntryList)(
        const bool_t open,
        TogglTimeEntryView *first,
        const bool_t show_load_more_button);
    typedef void (*TogglDisplayTimeline)(
        const bool_t open,
        const char_t *date,
        TogglTimelineChunkView *first,
        TogglTimeEntryView *first_entry,
        const uint64_t start_day,
        const uint64_t end_day);
    typedef void (*TogglDisplayAutocomplete)(
        TogglAutocompleteView *first);
    typedef void (*TogglDisplayHelpArticles)(
        TogglHelpArticleView *first);
    typedef void (*TogglDisplayViewItems)(
        TogglGenericView *first);
    typedef void (*TogglDisplayTimeEntryEditor)(
        const bool_t open,
        TogglTimeEntryView *te,
        const char_t *focused_field_name);
    typedef void (*TogglDisplaySettings)(
        const bool_t open,
        TogglSettingsView *settings);
    typedef void (*TogglDisplayTimerState)(
        TogglTimeEntryView *te);
    typedef void (*TogglDisplayUpdateDownloadState)(
        const char_t *version,
        const int64_t download_state);
    typedef void (*TogglDisplayMessage)(
        const char_t *title,
        const char_t *text,
        const char_t *button,
        const char_t *url);
    TOGGL_EXPORT void toggl_on_update_download_state(
        void *context,
        TogglDisplayUpdateDownloadState cb);
    TOGGL_EXPORT void toggl_on_message(
        void *context,
        TogglDisplayMessage cb);
    TOGGL_EXPORT void toggl_on_online_state(
        void *context,
        TogglDisplayOnlineState cb);
    TOGGL_EXPORT void toggl_on_url(
        void *context,
        TogglDisplayURL cb);
    TOGGL_EXPORT void toggl_on_login(
        void *context,
        TogglDisplayLogin cb);
    TOGGL_EXPORT void toggl_on_reminder(
        void *context,
        TogglDisplayReminder cb);
    TOGGL_EXPORT void toggl_on_pomodoro(
        void *context,
        TogglDisplayPomodoro cb);
    TOGGL_EXPORT void toggl_on_pomodoro_break(
        void *context,
        TogglDisplayPomodoroBreak cb);
    TOGGL_EXPORT void toggl_on_autotracker_notification(
        void *context,
        TogglDisplayAutotrackerNotification cb);
    TOGGL_EXPORT void toggl_on_time_entry_list(
        void *context,
        TogglDisplayTimeEntryList cb);
    TOGGL_EXPORT void toggl_toggle_entries_group(
        void *context,
        const char_t *name);
    TOGGL_EXPORT void toggl_on_timeline(
        void *context,
        TogglDisplayTimeline cb);
    TOGGL_EXPORT void toggl_on_mini_timer_autocomplete(
        void *context,
        TogglDisplayAutocomplete cb);
    TOGGL_EXPORT void toggl_on_help_articles(
        void *context,
        TogglDisplayHelpArticles cb);
    TOGGL_EXPORT void toggl_on_time_entry_autocomplete(
        void *context,
        TogglDisplayAutocomplete cb);
    TOGGL_EXPORT void toggl_on_project_autocomplete(
        void *context,
        TogglDisplayAutocomplete cb);
    TOGGL_EXPORT void toggl_on_workspace_select(
        void *context,
        TogglDisplayViewItems cb);
    // Redmine fork: the global TimeEntryActivity list (editor + Preferences).
    TOGGL_EXPORT void toggl_on_activities(
        void *context,
        TogglDisplayViewItems cb);
    TOGGL_EXPORT void toggl_on_client_select(
        void *context,
        TogglDisplayViewItems cb);
    TOGGL_EXPORT void toggl_on_tags(
        void *context,
        TogglDisplayViewItems cb);
    TOGGL_EXPORT void toggl_on_time_entry_editor(
        void *context,
        TogglDisplayTimeEntryEditor cb);
    TOGGL_EXPORT void toggl_on_settings(
        void *context,
        TogglDisplaySettings cb);
    TOGGL_EXPORT void toggl_on_timer_state(
        void *context,
        TogglDisplayTimerState cb);