app/lib/src/native/toggl_api_generated.dart


  void toggl_on_update_download_state(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayUpdateDownloadState cb,
  ) {
    return _toggl_on_update_download_state(context, cb);
  }

  late final _toggl_on_update_download_statePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            TogglDisplayUpdateDownloadState,
          )
        >
      >('toggl_on_update_download_state');
  late final _toggl_on_update_download_state =
      _toggl_on_update_download_statePtr
          .asFunction<
            void Function(
              ffi.Pointer<ffi.Void>,
              TogglDisplayUpdateDownloadState,
            )
          >();

  void toggl_on_message(ffi.Pointer<ffi.Void> context, TogglDisplayMessage cb) {
    return _toggl_on_message(context, cb);
  }

  late final _toggl_on_messagePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayMessage)
        >
      >('toggl_on_message');
  late final _toggl_on_message = _toggl_on_messagePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, TogglDisplayMessage)>();

  void toggl_on_online_state(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayOnlineState cb,
  ) {
    return _toggl_on_online_state(context, cb);
  }

  late final _toggl_on_online_statePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayOnlineState)
        >
      >('toggl_on_online_state');
  late final _toggl_on_online_state = _toggl_on_online_statePtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayOnlineState)
      >();

  void toggl_on_url(ffi.Pointer<ffi.Void> context, TogglDisplayURL cb) {
    return _toggl_on_url(context, cb);
  }

  late final _toggl_on_urlPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayURL)
        >
      >('toggl_on_url');
  late final _toggl_on_url = _toggl_on_urlPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, TogglDisplayURL)>();

  void toggl_on_login(ffi.Pointer<ffi.Void> context, TogglDisplayLogin cb) {
    return _toggl_on_login(context, cb);
  }

  late final _toggl_on_loginPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayLogin)
        >
      >('toggl_on_login');
  late final _toggl_on_login = _toggl_on_loginPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, TogglDisplayLogin)>();

  void toggl_on_reminder(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayReminder cb,
  ) {
    return _toggl_on_reminder(context, cb);
  }

  late final _toggl_on_reminderPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayReminder)
        >
      >('toggl_on_reminder');
  late final _toggl_on_reminder = _toggl_on_reminderPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, TogglDisplayReminder)>();

  void toggl_on_pomodoro(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayPomodoro cb,
  ) {
    return _toggl_on_pomodoro(context, cb);
  }

  late final _toggl_on_pomodoroPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayPomodoro)
        >
      >('toggl_on_pomodoro');
  late final _toggl_on_pomodoro = _toggl_on_pomodoroPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, TogglDisplayPomodoro)>();

  void toggl_on_pomodoro_break(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayPomodoroBreak cb,
  ) {
    return _toggl_on_pomodoro_break(context, cb);
  }

  late final _toggl_on_pomodoro_breakPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayPomodoroBreak)
        >
      >('toggl_on_pomodoro_break');
  late final _toggl_on_pomodoro_break = _toggl_on_pomodoro_breakPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayPomodoroBreak)
      >();

  void toggl_on_autotracker_notification(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayAutotrackerNotification cb,
  ) {
    return _toggl_on_autotracker_notification(context, cb);
  }

  late final _toggl_on_autotracker_notificationPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            TogglDisplayAutotrackerNotification,
          )
        >
      >('toggl_on_autotracker_notification');
  late final _toggl_on_autotracker_notification =
      _toggl_on_autotracker_notificationPtr
          .asFunction<
            void Function(
              ffi.Pointer<ffi.Void>,
              TogglDisplayAutotrackerNotification,
            )
          >();

  void toggl_on_time_entry_list(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayTimeEntryList cb,
  ) {
    return _toggl_on_time_entry_list(context, cb);
  }

  late final _toggl_on_time_entry_listPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayTimeEntryList)
        >
      >('toggl_on_time_entry_list');
  late final _toggl_on_time_entry_list = _toggl_on_time_entry_listPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayTimeEntryList)
      >();

  void toggl_toggle_entries_group(
    ffi.Pointer<ffi.Void> context,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _toggl_toggle_entries_group(context, name);
  }

  late final _toggl_toggle_entries_groupPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('toggl_toggle_entries_group');
  late final _toggl_toggle_entries_group = _toggl_toggle_entries_groupPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  void toggl_on_timeline(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayTimeline cb,
  ) {
    return _toggl_on_timeline(context, cb);
  }

  late final _toggl_on_timelinePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayTimeline)
        >
      >('toggl_on_timeline');
  late final _toggl_on_timeline = _toggl_on_timelinePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, TogglDisplayTimeline)>();

  void toggl_on_mini_timer_autocomplete(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayAutocomplete cb,
  ) {
    return _toggl_on_mini_timer_autocomplete(context, cb);
  }

  late final _toggl_on_mini_timer_autocompletePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayAutocomplete)
        >
      >('toggl_on_mini_timer_autocomplete');
  late final _toggl_on_mini_timer_autocomplete =
      _toggl_on_mini_timer_autocompletePtr
          .asFunction<
            void Function(ffi.Pointer<ffi.Void>, TogglDisplayAutocomplete)
          >();

  void toggl_on_help_articles(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayHelpArticles cb,
  ) {
    return _toggl_on_help_articles(context, cb);
  }

  late final _toggl_on_help_articlesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayHelpArticles)
        >
      >('toggl_on_help_articles');
  late final _toggl_on_help_articles = _toggl_on_help_articlesPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayHelpArticles)
      >();

  void toggl_on_time_entry_autocomplete(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayAutocomplete cb,
  ) {
    return _toggl_on_time_entry_autocomplete(context, cb);
  }

  late final _toggl_on_time_entry_autocompletePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayAutocomplete)
        >
      >('toggl_on_time_entry_autocomplete');
  late final _toggl_on_time_entry_autocomplete =
      _toggl_on_time_entry_autocompletePtr
          .asFunction<
            void Function(ffi.Pointer<ffi.Void>, TogglDisplayAutocomplete)
          >();

  void toggl_on_project_autocomplete(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayAutocomplete cb,
  ) {
    return _toggl_on_project_autocomplete(context, cb);
  }

  late final _toggl_on_project_autocompletePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayAutocomplete)
        >
      >('toggl_on_project_autocomplete');
  late final _toggl_on_project_autocomplete = _toggl_on_project_autocompletePtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayAutocomplete)
      >();

  void toggl_on_workspace_select(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayViewItems cb,
  ) {
    return _toggl_on_workspace_select(context, cb);
  }

  late final _toggl_on_workspace_selectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayViewItems)
        >
      >('toggl_on_workspace_select');
  late final _toggl_on_workspace_select = _toggl_on_workspace_selectPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayViewItems)
      >();

  /// Redmine fork: the global TimeEntryActivity list (editor + Preferences).
  void toggl_on_activities(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayViewItems cb,
  ) {
    return _toggl_on_activities(context, cb);
  }

  late final _toggl_on_activitiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayViewItems)
        >
      >('toggl_on_activities');
  late final _toggl_on_activities = _toggl_on_activitiesPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayViewItems)
      >();

  void toggl_on_client_select(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayViewItems cb,
  ) {
    return _toggl_on_client_select(context, cb);
  }

  late final _toggl_on_client_selectPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayViewItems)
        >
      >('toggl_on_client_select');
  late final _toggl_on_client_select = _toggl_on_client_selectPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayViewItems)
      >();

  void toggl_on_tags(ffi.Pointer<ffi.Void> context, TogglDisplayViewItems cb) {
    return _toggl_on_tags(context, cb);
  }

  late final _toggl_on_tagsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayViewItems)
        >
      >('toggl_on_tags');
  late final _toggl_on_tags = _toggl_on_tagsPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayViewItems)
      >();

  void toggl_on_time_entry_editor(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayTimeEntryEditor cb,
  ) {
    return _toggl_on_time_entry_editor(context, cb);
  }

  late final _toggl_on_time_entry_editorPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplayTimeEntryEditor)
        >
      >('toggl_on_time_entry_editor');
  late final _toggl_on_time_entry_editor = _toggl_on_time_entry_editorPtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, TogglDisplayTimeEntryEditor)
      >();

  void toggl_on_settings(
    ffi.Pointer<ffi.Void> context,
    TogglDisplaySettings cb,
  ) {
    return _toggl_on_settings(context, cb);
  }

  late final _toggl_on_settingsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, TogglDisplaySettings)
        >
      >('toggl_on_settings');
  late final _toggl_on_settings = _toggl_on_settingsPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>, TogglDisplaySettings)>();

  void toggl_on_timer_state(
    ffi.Pointer<ffi.Void> context,
    TogglDisplayTimerState cb,
  ) {
    return _toggl_on_timer_state(context, cb);
  }
